--- a/templates/about_top.html
+++ b/templates/about_top.html
@@ -26,17 +26,17 @@
       <div class="row">
         <div class="col text-center">
           <ul>
-            <li>
-              <a href="about.html">About</a>
-            </li>
+            <li>About</li>
 
             <li>
               <a href="stories.html">Stories</a>
             </li>
 
-            <li>Contact</li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
-    
+
 
