--- a/templates/ireland_top.html
+++ b/templates/ireland_top.html
@@ -6,14 +6,13 @@
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 
     <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Montserrat" rel="stylesheet">
 
-  </head>
-
+</head>
   <body>
 
     <div class="container">
@@ -27,16 +26,19 @@
         <div class="col text-center">
           <ul>
             <li>
-              <a href="about.html">About</a>
+              <a href="../about.html">About</a>
             </li>
 
             <li>
-              <a href="stories.html">Stories</a>
+              <a href="../stories.html">Stories</a>
             </li>
 
-            <li>Contact</li>
+            <li>
+              <a href="../contact.html">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
-    
+
+ 
 
